fix align

--- a/packages/rocketchat-theme/client/imports/components/alerts.css
+++ b/packages/rocketchat-theme/client/imports/components/alerts.css
@@ -20,10 +20,6 @@
 	align-items: center;
 	flex-grow: 0;
 
-	&--large {
-		padding: var(--alerts-padding-vertical-large) var(--alerts-padding);
-	}
-
 	&--large > &__content {
 		flex-direction: column;
 
@@ -58,6 +54,8 @@
 
 		white-space: nowrap;
 		text-overflow: ellipsis;
+
+		flex-grow: 0;
 	}
 
 	&__content > &__title + &__line {
@@ -79,6 +77,11 @@
 		font-size: 40px;
 	}
 
+	&--large {
+		padding: var(--alerts-padding-vertical-large) var(--alerts-padding);
+		justify-content: start;
+	}
+
 	&__content {
 		display: flex;
 		overflow: hidden;
@@ -88,5 +91,7 @@
 		flex: 1;
 
 		margin: 0 var(--alerts-padding-vertical);
+
+		justify-content: center;
 	}
 }
